--- a/app/src/main/res/values/sort_data.xml
+++ b/app/src/main/res/values/sort_data.xml
@@ -2,50 +2,32 @@
 <resources>
     <string-array name="soft">
 
-        <item>ก</item>
-        <item>ข</item>
-        <item>ฃ</item>
-        <item>ค</item>
-        <item>ฅ</item>
-        <item>ฆ</item>
-        <item>ง</item>
-        <item>จ</item>
-        <item>ฉ</item>
-        <item>ช</item>
-        <item>ซ</item>
-        <item>ฌ</item>
-        <item>ญ</item>
-        <item>ฎ</item>
-        <item>ฏ</item>
-        <item>ฐ</item>
-        <item>ฑ</item>
-        <item>ฒ</item>
-        <item>ณ</item>
-        <item>ด</item>
-        <item>ต</item>
-        <item>ถ</item>
-        <item>ท</item>
-        <item>ธ</item>
-        <item>น</item>
-        <item>บ</item>
-        <item>ป</item>
-        <item>ผ</item>
-        <item>ฝ</item>
-        <item>พ</item>
-        <item>ฟ</item>
-        <item>ภ</item>
-        <item>ม</item>
-        <item>ย</item>
-        <item>ร</item>
-        <item>ล</item>
-        <item>ว</item>
-        <item>ศ</item>
-        <item>ษ</item>
-        <item>ส</item>
-        <item>ห</item>
-        <item>ฬ</item>
-        <item>อ</item>
-        <item>ฮ</item>
+        <item>A</item>
+        <item>B</item>
+        <item>C</item>
+        <item>D</item>
+        <item>E</item>
+        <item>F</item>
+        <item>G</item>
+        <item>H</item>
+        <item>I</item>
+        <item>J</item>
+        <item>K</item>
+        <item>L</item>
+        <item>M</item>
+        <item>N</item>
+        <item>O</item>
+        <item>P</item>
+        <item>Q</item>
+        <item>R</item>
+        <item>S</item>
+        <item>T</item>
+        <item>U</item>
+        <item>V</item>
+        <item>W</item>
+        <item>X</item>
+        <item>Y</item>
+        <item>Z</item>
     </string-array>
 
 
