--- a/app/src/main/res/layout/activity_sort_list_view.xml
+++ b/app/src/main/res/layout/activity_sort_list_view.xml
@@ -4,7 +4,7 @@
     android:id="@+id/activity_sort_list_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/bg"
+    android:background="@drawable/wallpaper"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -16,5 +16,5 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="20dp"
-        android:background="#96ffffff" />
+        android:background="#1e000000" />
 </RelativeLayout>
