--- a/app/src/main/res/layout/sort_listview.xml
+++ b/app/src/main/res/layout/sort_listview.xml
@@ -1,18 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="5dp"
-        android:text="TextView"
-        android:textColor="@color/text"
-        android:textSize="@dimen/h1"
-        android:textStyle="normal|bold" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="5dp"
+            android:text="A"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/h1"
+            android:textStyle="normal|bold"
+            android:layout_toRightOf="@+id/imageView4" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/doremon48"
+            android:id="@+id/imageView4"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
 </LinearLayout>
